<resources>
    <string name="app_name">AppLabs</string>
    <string name="users">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="forgetPassword">¿Olvidaste tu contraseña?</string>
    <string name="login">Iniciar sesión</string>
    <string name="register">Regístrate</string>
    <string name="introduceEmail">Introduce tu correo</string>
    <string name="introducePassword">Introduce tu contraseña</string>
    <string name="confirmPassword">Confirmar contraseña</string>
    <string name="mostrar_u_ocultar_contrase_a">Mostrar u ocultar contraseña</string>
    <string name="mostrar_u_ocultar_contrase_b">Confimar contraseña</string>
    <string name="icono_exito">Ícono de éxito</string>
    <string name="contraseña_actualizada">Contraseña actualizada</string>
    <string name="btn_cambiar_contrasena">Botón para cambiar la contraseña</string>
    <string name="bienvenido_a_la_gesti_n_de_laboratorios">¡Bienvenido a la gestión \nde laboratorios!</string>
    <string name="formularios">Formularios</string>
    <string name="horarios">Horarios</string>
    <string name="operadores">Operadores</string>
    <string name="reportes">Reportes</string>
    <string name="visitas">Visitas</string>
    <string name="adminViewAplicationForm">Solicitudes</string>
    <string name="boton_menu_administrador">boton menu administrador</string>
    <string name="logo_de_la_app">Logo de la app</string>
    <string name="men">Menú</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="new_password">Cambiar contraseña</string>
    <string name="export_excel">Exportar horarios de aprobados</string>
    <string name="icono_del_usuario">icono del usuario</string>
    <string name="defaut_text_user">Brayan Gutiérrez Dinarte</string>
    <string name="defaut_rol_usuario">Administrador</string>
    <string name="cerrar">Cerrar</string>
    <string name="boton_de_notificaciones">boton de notificaciones</string>
    <string name="gesti_n_de_formularios">Gestión de formularios</string>
    <string name="editar_formulario">Editar formulario</string>
    <string name="nuevo_formulario">Nuevo formulario</string>
    <string name="ver_formularios">Ver formularios</string>
    <string name="gestionOperator">Gestión de operadores</string>
    <string name="operatorHistory">Historial</string>
    <string name="operatorActive">Activos</string>
    <string name="scheduleGeneral">Horario general</string>
    <string name="addSchedule">Asignar horario</string>
    <string name="application_form">Boleta de Solicitud</string>
    <string name="descriptionTitleForm">El siguiente formulario es para todos aquellos estudiantes interesados en obtener una asistencia (Horas Estudiantes - HE)</string>
    <string name="descripcionForm1">El Comité de Becas nos indica que es importante que cada estudiante tenga un respaldo de su participación y consideración para el Programa de Asistencias Estudiantiles (por ejemplo: para efectos de reclamo, en caso de que no se le brindara oportunidad de participar).</string>
    <string name="descripcionForm2">Para ello, se utiliza la Boleta de Solicitud de Asistencia Estudiantil. Posterior al envío de este formulario, se le solicita que descargue la boleta y la remita a las oficinas de la Carrera de Computación:</string>
    <string name="nameForm">Formulario de Operadores</string>
    <string name="idStudent">Cedula</string>
    <string name="weightedAverage">Promedio Ponderado del semestre anterior</string>
    <string name="descriotionAverage">se puede consultar en el Tec Digital, en la seccion de Reportes. Recuerda que paras las modalidades HE el promedio debe de ser mayor a 70</string>
    <string name="degree">Carrera</string>
    <string name="phoneNumber">Teléfono</string>
    <string name="idSchoolNumber">Digitos detras del carnet</string>
    <string name="idSchoolNumberDesc">Últimos 5 dígitos</string>
    <string name="scheduleAvailability">Disponibilidad de Horario: Seleccionar TODAS las posibilidades que tenga</string>
    <string name="schueduleDescription">Seleccionar TODAS las posibilidades que tengas</string>
    <string name="shifts">Turnos</string>
    <string name="hours1">80 horaas al semestre (5 Horas semanales)</string>
    <string name="hours2">160 horaas al semestre (10 Horas semanales)</string>
    <string name="schueduleHours">Disponbilidad de horarios para sus turnos</string>
    <string name="semesters">¿Cuántos semestres ha sido operador(a)?</string>
    <string name="totalSemesters">Total de Semestres</string>
    <string name="psychology">¿Tiene seguimiento en psicología?</string>
    <string name="psychologyDesc">Si tiene, anotar el nombre del psicologo (a)</string>
    <string name="psychologyName">Nombre del psicologo</string>
    <string name="ticket">Boleta de Solicitud de Asistencia Estudiantil: Si ha completado la Boleta en formato digital, la puede adjuntar en este apartado</string>
    <string name="archive">Añadir archivo</string>
    <string name="archiveDesc">Sube 1 archivo compatible. Tamaño máximo: 10 MB.</string>
    <string name="Requires">Requisitos y beneficios.</string>
    <string name="DescriptionR1">- Horas estudiantes</string>
    <string name="DescriptionR2">- Promedio ponderado igual o superior a 70 en el ultimo semestre.</string>
    <string name="DescriptionR3">- Exoneración tortal del pago de derechos de estudio.</string>
    <string name="DescriptionR4">- Renumeración económica de ₡900 por hora realizada al finalizar el semestre.</string>
    <string name="next">Siguiente</string>
    <string name="back">Antes</string>
    <string name="send">Enviar</string>
    <string name="errorId">Los digitos del carnet son requeridos</string>
    <string name="errorNumber">Los digitos deben de ser números</string>
    <string name="errorHours">Seleccione las horas deseadas en el semestre</string>
    <string name="errorSavingData">Error al guardar los datos</string>
    <string name="errorSchedule">Error con la disponibilidad de horarios</string>
    <string name="errorSemester">El número de semestres es requerido</string>
    <string name="errorPsychology">El campo es requerido, si no tiene pone N/A</string>
    <string name="error">Error</string>
    <string name="infoName">Nombre del estudiante</string>
    <string name="infoId">Cédula</string>
    <string name="infoCardStudent">Carnet</string>
    <string name="infoEmailStudent">Correo estudiantil</string>
    <string name="infoCellPhone">Teléfono</string>
    <string name="infoCareer">Carrera</string>
    <string name="infoWeightedAverage">Promedio</string>
    <string name="inforShifts">Turnos</string>
    <string name="infoBankAccount">Cuenta bancaria</string>
    <string name="infoLastDigitCard">Digitos carnet</string>
    <string name="infoSemesterOperator">Semestres operando</string>
    <string name="infoNamePsychology">Psicología</string>
    <string name="infoScheduleAvailability">Disponibilidad horaria</string>
    <string name="infoApplicationStatus">Estado de la solicitud</string>
    <string name="statusPending">Pendiente</string>
    <string name="statusAcept">Aceptada</string>
    <string name="statusRejected">Denegada</string>
    <string name="downloadDocument">Descargar Boleta</string>
    <string name="infoComment">Comentario</string>
    <string name="ver_historial">Ver historial</string>
    <string name="nuevo_formulario_para_operadores">Nuevo formulario para operadores</string>
    <string name="nuevo_formulario_de_operadores">Nuevo Formulario de Operadores</string>
    <string name="nombre_de_formulario">Nombre de formulario</string>
    <string name="link_del_formulario">Link de la boleta</string>
    <string name="campo_para_seleccionar_fecha_de_habilitaci_n">Campo para seleccionar fecha de habilitación</string>
    <string name="btnSaveStatus">Guardar estado</string>
    <string name="dataNotAvailable">No disponible</string>
    <string name="dataSemester">semestres</string>
    <string name="hoursWeekly">horas semanales</string>
    <string name="messageWelcome">Bienvenidos a \nCompuLabs</string>
    <string name="notification">Notificaciones</string>
    <string name="formAvailability">Formularios Disponibles"</string>
    <string name="withoutMessage">Sin notificaciones</string>
    <string name="messageNotification">Te avisaremos cuando tengas \nuna notificación.</string>
    <string name="semesterFilter">Cantidad de semestres siendo operador</string>
    <string name="status">Estado</string>
    <string name="name">Nombre</string>
    <string name="withoutForm">No hay formularios activos disponibles</string>
    <string name="formListTitle">Historial de Formularios Enviados</string>
    <string name="formLisDescription">Podra editar la informacion del formulario siempre y cuando este se encuentre en periodo activo.</string>
    <string name="nameFormEdit">Editar formulario</string>
    <string name="editFormCardId">Cédula</string>
    <string name="editFormWeightedAverage">Promedio ponderado del semestre anterior</string>
    <string name="editFormDegree">Carrera</string>
    <string name="editFormLastDigits">Dígitos detrás del carnet</string>
    <string name="editFormShifts">Turnos</string>
    <string name="editFormScheduleAvailability">Disponibilidad de horario</string>
    <string name="editFormSemesterOperator">Número de semestres como operador</string>
    <string name="editFormNamePsychology">Nombre de psicología</string>
    <string name="editApplicationForm">Boleta de solicitud (PDF)</string>
    <string name="editApplicationFormChange">Cambiar el documento PDF</string>
    <string name="editAnyApplicationForm">Ningún archivo seleccionado</string>
    <string name="saveChangesEdit">Guardar Cambios</string>
    <string name="morningTable">7am a 12</string>
    <string name="afternoonTable">12 a 5pm</string>
    <string name="eveningTable">5pm a 10pm</string>
    <string name="monday">Lunes</string>
    <string name="tuesday">Martes</string>
    <string name="wednesday">Miércoles</string>
    <string name="thursday">Jueves</string>
    <string name="friday">Viernes</string>
    <string name="saturday">Sábado</string>
    <string name="sunday">Domingo</string>
    <string name="aplicar_filtro">Aplicar filtro</string>
    <string name="selecciona_una_carrera">Selecciona una carrera:</string>
    <string name="filtrar_operadores_por">Filtrar operadores por:</string>
    <string name="carnet">Carnet</string>
    <string name="nombre">Nombre</string>
    <string name="carrera">Carrera</string>
    <string name="search">Search</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
</resources>