<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/baseActivityColor"
    tools:context=".student.FormStudent3">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toStartOf="@id/imageView"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSemester"
                style="@style/TextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="left"
                android:text="@string/semesters"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/etIdStudent"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/totalSemesters" />

            <TextView
                android:id="@+id/tvWeightedAverage"
                style="@style/TextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:gravity="left"
                android:padding="0dp"
                android:text="@string/psychology"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvAverageDesciption"
                style="@style/TextViewStyleDescriptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="0dp"
                android:gravity="left"
                android:text="@string/psychologyDesc"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/etWeightedAverage"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/psychologyName" />


            <TextView
                android:id="@+id/tvPhonneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="@color/marineBlue"
                android:padding="15dp"
                android:text="@string/ticket"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView9"
                style="@style/TextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="left"
                android:text="@string/archive" />

            <EditText
                android:id="@+id/etPhoneNumber"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="50dp" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnSend"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        app:backgroundTint="@color/marineBlue"
        app:layout_constraintBottom_toStartOf="@id/imageView"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnBack"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <Button
        android:id="@+id/btnBack"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:backgroundTint="@color/marineBlue"
        app:layout_constraintBottom_toStartOf="@id/imageView"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toStartOf="@+id/btnSend"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/imagen_form" />

</androidx.constraintlayout.widget.ConstraintLayout>