<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/baseActivityColor"
    tools:context=".login.MainActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/rectangle" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12"
        app:srcCompat="@drawable/logo_labs" />

    <TextView
        android:id="@+id/tv1"
        style="@style/TextViewStyle"
        android:layout_width="60dp"
        android:layout_height="21dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/users"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/tv2"
        style="@style/TextViewStyle"
        android:layout_width="92dp"
        android:layout_height="21dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et1" />

    <EditText
        android:id="@+id/et1"
        style="@style/EditTextStyle"
        android:layout_width="351dp"
        android:layout_height="56dp"
        android:ems="10"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/introduceEmail"
        android:inputType="text"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv1" />

    <EditText
        android:id="@+id/et2"
        style="@style/EditTextStyle"
        android:layout_width="351dp"
        android:layout_height="56dp"
        android:ems="10"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/introducePassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv2" />

    <Button
        android:id="@+id/btn1"
        style="@style/ButtonOutlineStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="160dp"
        android:text="@string/forgetPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et2"
        app:layout_constraintVertical_bias="0.029" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="234dp"
        android:layout_height="56dp"
        android:layout_marginTop="4dp"
        android:text="@string/login"
        style="@style/ButtonStyle"
        app:backgroundTint="@color/marineBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn1"
        app:layout_constraintVertical_bias="0.0"
        />

    <Button
        android:id="@+id/btn3"
        style="@style/ButtonOutlineStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="13dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn2"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>